# openCook

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.artifacts/2e8746e9-eccd-40e9-97f8-f24051ffbdbf/: implementation_plan.artifact.md  task.artifact.md  walkthrough.artifact.md
.artifacts/5ca2349d-cd4f-4db0-941d-cddaf271859a/: recipe_upload_template.artifact.md
.github/workflows/: ci.yml
app/: build.gradle.kts  proguard-rules.pro
app/schemas/com.food.opencook.data.local.OpenCookDatabase/: 2.json  3.json
docs/wiki/: README.md
extension/: README.md  extract.js  manifest.json  options.html  options.js  popup.html  popup.js
fastlane/: Fastfile  Pluginfile
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
server/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
server/app/: backup.py  config.py  db.py  discovery.py  extraction.py  main.py  models.py  ollama_client.py  schemas.py  security.py  sync.py  worker.py
server/app/api/: _deps.py  admin.py  households.py  images.py  imports.py  jobs.py  sync.py  updates.py
server/app/i18n/: README.md  de.json  en.json
server/app/static/: admin.html
server/scripts/: backup.py  crop_experiment.py  extract_experiment.py  publish_apk.py  restore.py  run_extraction.py
server/tests/: test_admin.py  test_admin_bootstrap.py  test_admin_db.py  test_backup.py  test_extraction.py  test_health.py  test_households.py  test_images.py  test_imports.py  test_sync.py  test_sync_api.py
server/tests/fixtures/: sync-vectors.json
(+258 files in other folders)
