[project]
name = "opencook-server"
version = "0.1.0"
description = "openCook self-hosted AI & sync server (FastAPI + Ollama)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "pydantic-settings>=2.5",
    "python-multipart>=0.0.12",
    "httpx>=0.27",
    "pillow>=11.0",
    "zeroconf>=0.132",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
